jenkins-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: jenkins/jenkins:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 50000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins
          resources:
            requests:
              memory: '1.5Gi'
              cpu: '500m'
            limits:
              memory: '3Gi'
              cpu: '1.25'
        - name: pythonwbhrelay
          image: 'sktrinh12/jenkins-sidecar-wbhrelay:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
        - name: webhookrelayd
          image: 'webhookrelay/webhookrelayd:latest'
          imagePullPolicy: IfNotPresent
          command: ['/relayd']
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
        - name: jenkins
          persistentVolumeClaim:
            claimName: jenkins-claim
